force-app/main/default/objects/JMS_Broker_Call__c/JMS_Broker_Call__c.object-meta.xml
<CustomObject>
    <description>Calls that external brokers have made to customers.</description>
    <label>Broker Call</label>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Broker Call Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Broker Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>