force-app/main/default/objects/JMS_Broker_Call__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Broker Calls</relationshipLabel>
    <relationshipName>Broker_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>