force-app/main/default/objects/JMS_Broker_Call__c/fields/JMS_Broker_Call_ID__c.field-meta.xml
<CustomField>
    <fullName>JMS_Broker_Call_ID__c</fullName>
    <label>Broker Call ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>