force-app/main/default/objects/JMS_Broker_Call__c/fields/JMS_Broker_Company__c.field-meta.xml
<CustomField>
    <fullName>JMS_Broker_Company__c</fullName>
    <description>Broker Company</description>
    <label>Broker Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>