force-app/main/default/objects/JMS_Broker_Call__c/fields/JMS_Broker_Email__c.field-meta.xml
<CustomField>
    <fullName>JMS_Broker_Email__c</fullName>
    <label>Broker Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>