force-app/main/default/objects/JMS_Broker_Call__c/fields/JMS_BrokerFirstName__c.field-meta.xml
<CustomField>
    <fullName>JMS_BrokerFirstName__c</fullName>
    <description>FirstName of Broker</description>
    <label>Broker First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>