force-app/main/default/objects/JMS_Broker_Call__c/fields/JMS_BrokerLastName__c.field-meta.xml
<CustomField>
    <fullName>JMS_BrokerLastName__c</fullName>
    <description>LastName of Broker</description>
    <label>Broker Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>