force-app/main/default/objects/JMS_Broker_Call__c/fields/JMS_BrokerTerritoryId__c.field-meta.xml
<CustomField>
    <fullName>JMS_BrokerTerritoryId__c</fullName>
    <description>BrokerTerritoryId</description>
    <label>BrokerTerritoryId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>