force-app/main/default/objects/JMS_Broker_Call__c/fields/JMS_BrokerTerritoryName__c.field-meta.xml
<CustomField>
    <fullName>JMS_BrokerTerritoryName__c</fullName>
    <description>BrokerTerritoryName</description>
    <label>BrokerTerritoryName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>