force-app/main/default/objects/JMS_Broker_Call__c/fields/JMS_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>JMS_Call_Date__c</fullName>
    <description>Call Date</description>
    <label>Call Date</label>
    <type>Date</type>
</CustomField>