force-app/main/default/objects/JMS_Broker_Call__c/fields/JMS_Call_Distributor__c.field-meta.xml
<CustomField>
    <fullName>JMS_Call_Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Broker Calls (Call Distributor)</relationshipLabel>
    <relationshipName>Broker_Calls1</relationshipName>
    <type>Lookup</type>
</CustomField>