force-app/main/default/objects/JMS_Broker_Call__c/fields/JMS_Call_Distributor_Name__c.field-meta.xml
<CustomField>
    <fullName>JMS_Call_Distributor_Name__c</fullName>
    <description>Call Distributor Name</description>
    <label>Call Distributor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>