force-app/main/default/objects/JMS_Broker_Call__c/fields/JMS_Campaign__c.field-meta.xml
<CustomField>
    <fullName>JMS_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Should lookup to Campaign.Name</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Broker Calls</relationshipLabel>
    <relationshipName>Broker_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>