force-app/main/default/objects/JMS_Broker_Call__c/fields/JMS_CompletedDateTime__c.field-meta.xml
<CustomField>
    <fullName>JMS_CompletedDateTime__c</fullName>
    <description>Completed Data and Time</description>
    <label>CompletedDateTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>