force-app/main/default/objects/JMS_Broker_Call__c/fields/JMS_Contact__c.field-meta.xml
<CustomField>
    <fullName>JMS_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Broker Calls (Contact)</relationshipLabel>
    <relationshipName>Broker_Calls1</relationshipName>
    <type>Lookup</type>
</CustomField>