force-app/main/default/objects/JMS_Broker_Call__c/fields/JMS_Disposition__c.field-meta.xml
<CustomField>
    <fullName>JMS_Disposition__c</fullName>
    <description>Like description</description>
    <label>Disposition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>