force-app/main/default/objects/JMS_Broker_Call__c/fields/JMS_External_Call_ID__c.field-meta.xml
<CustomField>
    <fullName>JMS_External_Call_ID__c</fullName>
    <description>ID of External call</description>
    <externalId>true</externalId>
    <label>External Call ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>