force-app/main/default/objects/JMS_Broker_Call__c/fields/JMS_External_Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>JMS_External_Opportunity_Id__c</fullName>
    <description>External Opportunity Id</description>
    <label>External Opportunity Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>