force-app/main/default/objects/JMS_Broker_Call__c/fields/JMS_External_Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>JMS_External_Opportunity_Stage__c</fullName>
    <description>External Opportunity Stage</description>
    <label>External Opportunity Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>