force-app/main/default/objects/JMS_Broker_Call__c/fields/JMS_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>JMS_Item_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Item Number</description>
    <label>Item Number</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Broker Calls</relationshipLabel>
    <relationshipName>Broker_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>