force-app/main/default/objects/JMS_Broker_Call__c/fields/JMS_Item_Quantity__c.field-meta.xml
<CustomField>
    <fullName>JMS_Item_Quantity__c</fullName>
    <description>Item Quantity</description>
    <label>Item Quantity</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>