force-app/main/default/objects/JMS_Broker_Call__c/fields/JMS_WhoId__c.field-meta.xml
<CustomField>
    <fullName>JMS_WhoId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relation between contact and broker call</description>
    <label>WhoId</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Broker Calls</relationshipLabel>
    <relationshipName>Broker_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>