force-app/main/default/objects/JMS_Broker_Call__c/fields/JMS_WRAP_Target__c.field-meta.xml
<CustomField>
    <fullName>JMS_WRAP_Target__c</fullName>
    <description>WRAP Target</description>
    <label>WRAP Target</label>
    <length>255</length>
    <type>Text</type>
</CustomField>