force-app/main/default/objects/JMS_Broker_Call__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>JMS_Broker_Company__c</columns>
    <columns>JMS_BrokerTerritoryName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account__c</columns>
    <columns>JMS_Campaign__c</columns>
    <columns>JMS_Call_Status__c</columns>
    <columns>JMS_Item_Number__c</columns>
    <columns>JMS_Item_Status__c</columns>
    <columns>JMS_Item_Quantity__c</columns>
    <columns>JMS_Item_No_Sale_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>